Fix various deprecations